// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should left align title 1`] = `
<div>
  <nav
    class="application-header  mko_1x9y6no-applicationHeader"
  >
    <div
      class="flex-spacer"
    />
    <h1
      class="application-header__title"
    >
      Hello
    </h1>
    <div
      class="flex-spacer"
    />
  </nav>
</div>
`;

exports[`should left align title 2`] = `
<div>
  <nav
    class="application-header  mko_1x9y6no-applicationHeader"
  >
    <h1
      class="application-header__title"
    >
      Hello
    </h1>
    <div
      class="flex-spacer"
    />
  </nav>
</div>
`;

exports[`should render navLeft 1`] = `
<div>
  <nav
    class="application-header  mko_1x9y6no-applicationHeader"
  >
    <div
      class="application-header__links-block"
    >
      <div>
        left side
      </div>
    </div>
    <div
      class="flex-spacer"
    />
    <div
      class="flex-spacer"
    />
  </nav>
</div>
`;

exports[`should render navRight 1`] = `
<div>
  <nav
    class="application-header  mko_1x9y6no-applicationHeader"
  >
    <div
      class="flex-spacer"
    />
    <div
      class="flex-spacer"
    />
    <div
      class="application-header__links-block"
    >
      <div>
        right side
      </div>
    </div>
  </nav>
</div>
`;

exports[`should render title 1`] = `
<div>
  <nav
    class="application-header  mko_1x9y6no-applicationHeader"
  >
    <div
      class="flex-spacer"
    />
    <h1
      class="application-header__title"
    >
      hello world
    </h1>
    <div
      class="flex-spacer"
    />
  </nav>
</div>
`;

exports[`should render with minimum props 1`] = `
<div>
  <nav
    class="application-header  mko_1x9y6no-applicationHeader"
  >
    <div
      class="flex-spacer"
    />
    <div
      class="flex-spacer"
    />
  </nav>
</div>
`;
